--- a/zmoney/Views/Base.lproj/Main.storyboard
+++ b/zmoney/Views/Base.lproj/Main.storyboard
@@ -4,13 +4,14 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="zmoney" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="zmoney" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -47,10 +48,71 @@
                             <constraint firstItem="FC1-Hu-akV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="lP4-IS-GhB"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="M63-o3-LdJ" kind="show" identifier="LoginToTransactions" id="Z8K-Rz-IcR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-204.34782608695653" y="137.94642857142856"/>
         </scene>
+        <!--Profile-->
+        <scene sceneID="NhH-mD-otg">
+            <objects>
+                <viewController id="Ywk-PG-yRo" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lD5-fG-saR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Fin-3s-sDA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" image="face.smiling" catalog="system" id="hAo-Nn-1bq"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nHD-kc-rTQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1390" y="442"/>
+        </scene>
+        <!--Transactions-->
+        <scene sceneID="XJh-4s-xLD">
+            <objects>
+                <viewController id="mns-g3-biU" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dCO-ae-iZR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Xp6-IV-nRC"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Transactions" image="list.bullet" catalog="system" id="DdR-co-gAb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TZs-Xd-BCl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1390" y="-165"/>
+        </scene>
+        <!--Tab Bar View Controller-->
+        <scene sceneID="ZjJ-JY-ypq">
+            <objects>
+                <tabBarController id="M63-o3-LdJ" customClass="TabBarViewController" customModule="zmoney" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="O5R-Ht-2Lr"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4oi-Jh-XGm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="mns-g3-biU" kind="relationship" relationship="viewControllers" id="swi-CU-Rem"/>
+                        <segue destination="Ywk-PG-yRo" kind="relationship" relationship="viewControllers" id="JPJ-ng-Cco"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ptL-Iz-gMy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="568" y="138"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="face.smiling" catalog="system" width="128" height="121"/>
+        <image name="list.bullet" catalog="system" width="128" height="88"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
