--- a/zmoney/Views/Base.lproj/Main.storyboard
+++ b/zmoney/Views/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="zmoney" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="zmoney" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -38,7 +38,7 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.082352941176470587" green="0.098039215686274508" blue="0.12156862745098039" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.16078431372549018" green="0.2196078431372549" blue="0.32156862745098036" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FC1-Hu-akV" secondAttribute="trailing" constant="20" id="MIF-Bh-kRb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YEr-65-Tex" secondAttribute="trailing" constant="20" id="S3i-9N-g6k"/>
@@ -48,9 +48,7 @@
                             <constraint firstItem="FC1-Hu-akV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="lP4-IS-GhB"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <segue destination="M63-o3-LdJ" kind="show" identifier="LoginToTransactions" id="Z8K-Rz-IcR"/>
-                    </connections>
+                    <navigationItem key="navigationItem" id="iVq-El-xX8"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -59,14 +57,66 @@
         <!--Profile-->
         <scene sceneID="NhH-mD-otg">
             <objects>
-                <viewController id="Ywk-PG-yRo" sceneMemberID="viewController">
+                <viewController id="Ywk-PG-yRo" customClass="ProfileViewController" customModule="zmoney" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lD5-fG-saR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xbw-jt-N2p">
+                                <rect key="frame" x="20" y="64" width="374" height="48"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Ory-Wq-vxe">
+                                        <rect key="frame" x="0.0" y="0.0" width="106" height="48"/>
+                                        <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="34"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hbk-SB-xlT">
+                                        <rect key="frame" x="106" y="0.0" width="268" height="48"/>
+                                        <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="20"/>
+                                        <state key="normal" title="Log Out">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="logOutButtonTapped:" destination="Ywk-PG-yRo" eventType="touchUpInside" id="NGC-AE-0Es"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="twttr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mg-Oe-UAG">
+                                <rect key="frame" x="20" y="132" width="374" height="25.5"/>
+                                <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="18"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="me@twttr.io" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gsH-6m-hsE">
+                                <rect key="frame" x="20" y="177.5" width="374" height="25.5"/>
+                                <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="18"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Fin-3s-sDA"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.16078431372549018" green="0.2196078431372549" blue="0.32156862745098036" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="Fin-3s-sDA" firstAttribute="trailing" secondItem="0mg-Oe-UAG" secondAttribute="trailing" constant="20" id="0nq-sW-IhE"/>
+                            <constraint firstItem="0mg-Oe-UAG" firstAttribute="top" secondItem="Xbw-jt-N2p" secondAttribute="bottom" constant="20" id="0wT-Vu-pWg"/>
+                            <constraint firstItem="0mg-Oe-UAG" firstAttribute="leading" secondItem="Fin-3s-sDA" secondAttribute="leading" constant="20" id="5Ld-we-99h"/>
+                            <constraint firstItem="Fin-3s-sDA" firstAttribute="trailing" secondItem="gsH-6m-hsE" secondAttribute="trailing" constant="20" id="GDb-EQ-fKM"/>
+                            <constraint firstItem="Fin-3s-sDA" firstAttribute="trailing" secondItem="Xbw-jt-N2p" secondAttribute="trailing" constant="20" id="QXp-vw-GjQ"/>
+                            <constraint firstItem="Xbw-jt-N2p" firstAttribute="top" secondItem="Fin-3s-sDA" secondAttribute="top" constant="20" id="TPT-dV-vPl"/>
+                            <constraint firstItem="gsH-6m-hsE" firstAttribute="leading" secondItem="Fin-3s-sDA" secondAttribute="leading" constant="20" id="Thk-Wr-vSq"/>
+                            <constraint firstItem="Fin-3s-sDA" firstAttribute="trailing" secondItem="gsH-6m-hsE" secondAttribute="trailing" constant="20" id="elR-Ro-sF9"/>
+                            <constraint firstItem="gsH-6m-hsE" firstAttribute="leading" secondItem="Fin-3s-sDA" secondAttribute="leading" constant="20" id="hq6-d4-36V"/>
+                            <constraint firstItem="gsH-6m-hsE" firstAttribute="top" secondItem="0mg-Oe-UAG" secondAttribute="bottom" constant="20" id="quu-Ex-xgF"/>
+                            <constraint firstItem="Xbw-jt-N2p" firstAttribute="leading" secondItem="Fin-3s-sDA" secondAttribute="leading" constant="20" id="ywD-Qd-kG5"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="face.smiling" catalog="system" id="hAo-Nn-1bq"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="gsH-6m-hsE" id="TdP-v1-8ut"/>
+                        <outlet property="nickLabel" destination="0mg-Oe-UAG" id="bE9-Ph-cvV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nHD-kc-rTQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -75,9 +125,9 @@
         <!--Transactions-->
         <scene sceneID="XJh-4s-xLD">
             <objects>
-                <viewController id="mns-g3-biU" sceneMemberID="viewController">
+                <viewController id="mns-g3-biU" customClass="TransactionsViewController" customModule="zmoney" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dCO-ae-iZR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="Xp6-IV-nRC"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -91,7 +141,7 @@
         <!--Tab Bar View Controller-->
         <scene sceneID="ZjJ-JY-ypq">
             <objects>
-                <tabBarController id="M63-o3-LdJ" customClass="TabBarViewController" customModule="zmoney" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarViewController" id="M63-o3-LdJ" customClass="TabBarViewController" customModule="zmoney" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="O5R-Ht-2Lr"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4oi-Jh-XGm">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
