login view as modelview

--- a/zmoney/Views/Base.lproj/Main.storyboard
+++ b/zmoney/Views/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-204.34782608695653" y="137.94642857142856"/>
+            <point key="canvasLocation" x="2194" y="138"/>
         </scene>
         <!--Profile-->
         <scene sceneID="NhH-mD-otg">
